# switchcrop

./: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  processor.rs
src/lib/: presets.ts
src/lib/commands/: crop-commands.ts
src/lib/components/: CropPanel.svelte  FileList.svelte  PreviewPanel.svelte  ProgressBar.svelte
src/lib/stores/: crop-store.ts
src/lib/types/: index.ts
tests/: crop-store.test.ts  setup.ts
